# econom_models

./: .gitignore  Base_econom_model_1.2.ipynb  gamma.csv  norm.csv  pyproject.toml  ravn.csv  readme.md  smith.py  smith_1.0.ipynb  smith_1.2.ipynb  tst.txt
.ipynb_checkpoints/: Base_econom_model_1.2-checkpoint.ipynb  tests-checkpoint.ipynb
configs/: base.yaml  employment.yaml  irrational.yaml
data/: cit_01.csv  cit_2020-01-03 22:30:01.111189.csv  cit_2020-01-03 22:34:17.007676.csv  cit_2020-01-03 22:55:26.753934.csv  fact_01.csv  fact_2020-01-03 22:30:01.102557.csv  fact_2020-01-03 22:34:17.005302.csv  fact_2020-01-03 22:55:26.724423.csv
econom_sim/: __init__.py  config.py  domain.py  engine.py  events.py  metrics.py  rng.py
econom_sim/io/: __init__.py  snapshot.py
econom_sim/market/: __init__.py  consumer.py  employment.py  modernise.py  pricing.py  salary.py  trade.py
econom_sim/ui/: __init__.py  cli_step.py  streamlit_app.py  telegram_bot.py
old_versions/: Base_econom_model_1.2.ipynb  smith_1.0.ipynb  smith_legacy.py  ver_1.2.ipynb
old_versions/.ipynb_checkpoints/: smith_1.1-checkpoint.ipynb
tests/: test_compat_baseline.py  test_config_load.py  test_consumer_strategies.py  test_determinism.py  test_employment.py  test_features_off.py  test_irrationality.py  test_metrics.py  test_money_conservation.py  test_telegram_stub.py
tests/golden/: baseline.json
